--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Organization chart demo"
     />
-    <title>TTG Organization Chart</title>
+    <title>TTG Organization Chart Demo</title>
   </head>
   <body>
     <div id="root"></div>
